bar overflow solved

--- a/src/Visualizer/Visualizer.css
+++ b/src/Visualizer/Visualizer.css
@@ -6,18 +6,18 @@
 }
 
 .array-container{
+    text-align: center;
     margin: auto;
-    width: 90%;
-    /*background-color: #dcdada;*/
-
 }
 .array-bars{
     /*width: 2px;*/
-    margin: 0px 1px;
+    box-sizing: border-box;
+    /* margin: 0px 1px; */
     display: inline-block;
     vertical-align:top;
     background-color: #0074D9;
     border-bottom: 1px solid;
+    border: 1px solid;
     text-align: center;
     font-size: 12px;
 
